# text_parser

./: .claude_project_config.md  .dockerignore  .env.example  .env.production  .env.railway.example  .gitignore  API_INTEGRATION_GUIDE.md  API_KEY_USAGE.md  API_USAGE_GUIDE.md  CLAUDE.md  CLEANUP_REPORT.md  DIGITALOCEAN_DEPLOY_GUIDE.md  Dockerfile  Dockerfile.prod  Dockerfile.railway  HWP_PARSER_IMPROVEMENTS.md  Makefile  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  README_EXTRACT.md  RENDER_DEPLOYMENT.md  SECURITY_ENHANCEMENTS.md  TODO.md  alembic.ini  analyze_pdf.py  build.sh  cleanup_data.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_pdf.py  postman_collection.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py  run_server.py  start.sh  (+7 more)
alembic/: env.py
app/: main.py  tasks.py
app/api/v1/: api.py
app/api/v1/endpoints/: api_keys.py  async_extract.py  auth.py  cache.py  convert.py  extract.py  extract_auth.py  (+4 more)
app/core/: __init__.py  cache.py  celery_app.py  config.py  decorators.py  error_handlers.py  exceptions.py  security.py
app/db/: base.py  session.py
app/middleware/: api_key_auth.py  concurrency.py  rate_limit_fixed.py
app/models/: auth.py  database.py  extract.py  status.py
app/schemas/: convert.py
app/services/: cached_extractor.py  enhanced_hwp_parser.py  hwp5_parser.py  hwp_converter.py  hwp_parser.py  hwp_to_hwpx.py  hwpx_parser.py  hybrid_hwp_parser.py  improved_hwp_parser.py  olefile_parser.py  pdf_fixer.py  pdf_generator.py  pdf_parser.py  pyhwp_parser.py  stream_parser.py  text_extractor.py
app/utils/: exceptions.py  file_utils.py  file_validator.py  memory_manager.py  streaming.py  virus_scanner.py
docker/: Dockerfile
examples/javascript/: index.html
examples/python/: client.py
nginx/conf.d/: hwp_api.conf
tests/: conftest.py  test_api.py  test_api_keys.py  test_auth_endpoints.py  test_cache.py  test_extract_endpoints.py  test_integration.py  test_pdf_generator.py  test_text_extractor.py  test_utils.py
